demo-bootstrap/examples/demo-application/manifests/checkout/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: checkout
  name: allow-checkout-ingress-webservice
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: checkout
      app.kubernetes.io/component: service
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ui
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ui
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: checkout
  name: allow-checkout-ingress-redis
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: checkout
      app.kubernetes.io/component: redis
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: checkout
              app.kubernetes.io/component: service
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: checkout
  name: allow-checkout-egress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: checkout
      app.kubernetes.io/component: service
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: orders
      podSelector:
        matchLabels:
          app.kubernetes.io/name: orders
    ports:
    - protocol: TCP
      port: 8080
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: checkout
          app.kubernetes.io/component: redis
    ports:
    - protocol: TCP
      port: 6379
  - ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
